[package]
name = "windivert-sys"
version = "0.1.0"
authors = ["user"]
edition = "2018"
links = "WinDivert"

[build-dependencies]
cc = "1.0.26"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.6"
features = ["ntdef", "minwindef", "basetsd", "minwinbase"]

[target.'cfg(windows)'.dev-dependencies.winapi]
version = "0.3.6"
features = ["errhandlingapi", "handleapi", "winerror", "minwindef"]